# techradar

./: .env.example  .gitignore  LICENSE  README.md  README.txt  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
src/: cache.py  config.py  graph.py  lambda_handler.py  main.py  state.py
src/agent/: __init__.py  filter.py  summarizer.py
src/email/: digest.py
src/scrapers/: __init__.py  hackernews.py  rss.py
tests/: test_graph_full.py  test_graph_gemini_retry.py  test_graph_no_articles.py
