[project]
name = "techradar"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "google-genai>=2.4.0",
    "httpx>=0.28.1",
    "praw>=7.8.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sendgrid>=6.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
