[project]
name = "techradar"
version = "0.1.0"
description = "Dépendances de mon projet de veille"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "feedparser>=6.0.12",
    "google-genai>=2.4.0",
    "httpx>=0.28.1",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "loguru>=0.7.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sendgrid>=6.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
